syntax = "proto2";
package msg;
import "core.types.proto";

//import "github.com/gogo/protobuf/gogoproto/gogo.proto";
//option (gogoproto.unmarshaler_all) = true;
//option (gogoproto.sizer_all) = true;


// AuthRegister
// @Function
// @Return: AuthAthorization
message AuthRegister {
    required string Phone = 1;
    required string FirstName = 2;
    required string LastName = 3;
    required string PhoneCode = 4;
    required string PhoneCodeHash = 5;
}

// AuthLogin
// @Function
// @Return: AuthAuthorization
message AuthLogin {
    required string Phone = 1;
    required string PhoneCodeHash = 2;
    required string PhoneCode = 3;
}

// AuthLogout
// @Function
// @Return: Bool
message AuthLogout {

}

// AuthCheckPhone
// @Function
// @Return: AuthCheckedPhone
message AuthCheckPhone {
    required string Phone = 1;
}

// AuthSendCode
// @Function
// @Return AuthSentCode
message AuthSendCode {
    required string Phone = 1;
}

// AuthRecall
// @Function
// @Return AuthRecalled
message AuthRecall {
    required int64 ClientID = 1;
}

// AuthRecalled
message AuthRecalled {
    required int64 ClientID = 1;
}

// AuthAuthorization
message AuthAuthorization {
    required fixed64 Expired = 1;
    required User User = 2;
}

// AuthCheckedPhone
message AuthCheckedPhone {
    required bool Invited = 1;
    required bool Registered = 2;
}

// AuthSentCode
message AuthSentCode {
    required string Phone = 1;
    required string PhoneCodeHash = 2;
}