syntax = "proto2";
package msg;


// EchoWithDelay
message EchoWithDelay {
    required int32  DelayInSeconds = 1 ;
}
