syntax = "proto2";
package msg;
//import "github.com/gogo/protobuf/gogoproto/gogo.proto";
//option (gogoproto.unmarshaler_all) = true;
//option (gogoproto.sizer_all) = true;


// FileSavePart
// @Function
// @Returns: Bool
message FileSavePart {
    required int64 FileID = 1;
    required int32 PartID = 2;
    required int32 TotalParts = 3;
    required bytes Bytes = 4;
}

// FileGetPart
// @Function
// @Returns FilePart
message FileGetPart {
    required FileLocation Location = 1;
    required int32 PartID = 2;
}

// FileLocation
message FileLocation {
    required int64 PartitionID = 1;
    required int64 FileID = 2;
    required int64 AccessHash = 3;
    required int32 TotalParts = 4;
}

// FilePart
message FilePart {
    required FileType Type = 1;
    required int64 ModifiedTime = 2;
    required int32 PartID = 3 ;
    required bytes Bytes = 4;
}

// FileType
enum FileType {
    Unknown = 0;
    Partial = 1;
    Jpeg = 2;
    Gif = 3;
    Png = 4;
    Webp = 5;
    Mp3 = 6;
    Mp4 = 7;
    Mov = 8;
}