syntax = "proto2";
package msg;
import "core.types.proto";
//import "github.com/gogo/protobuf/gogoproto/gogo.proto";
//option (gogoproto.unmarshaler_all) = true;
//option (gogoproto.sizer_all) = true;

// JobSendMessage
message JobSendMessage {
    required fixed64 GlobalID = 1;
    required int64 SenderID = 2;
    required int64 SenderMessageID = 3;
    required InputPeer Peer = 4;
    required string Body = 5;
}

// JobUserJoined
message JobUserJoined {
    required int64 UserID = 1;
    required string Phone = 2;
}

// JobEditMessage
message JobEditMessage {
    required fixed64 GlobalID = 1;
    required string Body = 2;
}

// JobReadHistory
message JobReadHistory {
    required int64 UserID = 1;
    required InputPeer Peer = 2;
    required int64 ReadInboxMaxID = 3;
    required int64 MessageID = 4;
}

// JobImportContacts
message JobImportContacts {

}