/* tslint:disable-next-line */
export const C_MSG = {
    APIPushMessage: 641286154,
    Ack: 385298133,
    AuthAuthorization: 4053755620,
    AuthCheckPhone: 3172140755,
    AuthCheckedPhone: 483043997,
    AuthLogin: 3946144572,
    AuthRecall: 2526871056,
    AuthRecalled: 3990431477,
    AuthRegister: 3561709600,
    AuthSendCode: 2986066283,
    AuthSentCode: 2748104121,
    Bool: 1899043582,
    ContactUser: 2388266701,
    ContactsDelete: 3995863226,
    ContactsGet: 1073306427,
    ContactsImport: 2423614210,
    ContactsImported: 1407883384,
    ContactsMany: 1989741809,
    DHGroup: 3392605023,
    Dialog: 4283681568,
    EchoWithDelay: 2253005559,
    Error: 3680148446,
    FileGetPart: 1692131599,
    FileLocation: 2535539265,
    FilePart: 1094901168,
    FileSavePart: 1059853108,
    InitAuthCompleted: 2398543835,
    InitCompleteAuth: 1420887869,
    InitCompleteAuthInternal: 2368010666,
    InitConnect: 3629018090,
    InitDB: 781832613,
    InitResponse: 2298972882,
    InputFile: 553203950,
    InputPeer: 1162878790,
    JobEditMessage: 4115405359,
    JobImportContacts: 2319413606,
    JobReadHistory: 454175989,
    JobSendMessage: 4016996962,
    JobUserJoined: 3498181946,
    MessageContainer: 4262040704,
    MessageEnvelope: 13094896,
    MessagesDialogs: 1093078510,
    MessagesEdit: 1491651266,
    MessagesGet: 2216227569,
    MessagesGetDialog: 197509269,
    MessagesGetDialogs: 2828529252,
    MessagesGetHistory: 1365642319,
    MessagesMany: 2787274279,
    MessagesReadHistory: 3556707698,
    MessagesSend: 3692099915,
    MessagesSendMedia: 368782731,
    MessagesSent: 451707196,
    MessagesSetTyping: 4206615049,
    Peer: 2315870261,
    PhoneContact: 258550882,
    ProtoEncryptedPayload: 2152660586,
    ProtoMessage: 1864054468,
    RSAPublicKey: 1349424734,
    SystemClientLog: 2473987063,
    SystemDHGroups: 3113233231,
    SystemGetDHGroups: 323970307,
    SystemGetPublicKeys: 3060519878,
    SystemPublicKeys: 3989459992,
    UpdateContainer: 179091340,
    UpdateDifference: 3594295099,
    UpdateEnvelope: 1851762858,
    UpdateGetDifference: 2430670040,
    UpdateGetState: 4290065315,
    UpdateMessageEdited: 1833941516,
    UpdateMessageID: 3886804303,
    UpdateNewMessage: 2775410509,
    UpdateReadHistoryInbox: 2581622837,
    UpdateReadHistoryOutbox: 2476169775,
    UpdateState: 706217011,
    UpdateUserStatus: 3466187634,
    UpdateUserTyping: 4032969329,
    User: 3055870901,
    UserMessage: 2472778110,
    WorkerRequest: 1780190743,
};

export const C_ERR = {
    ERR_CODE_ACCESS: "E07",
    ERR_CODE_ALREADY_EXISTS: "E08",
    ERR_CODE_BUSY: "E09",
    ERR_CODE_INCOMPLETE: "E05",
    ERR_CODE_INTERNAL: "E00",
    ERR_CODE_INVALID: "E01",
    ERR_CODE_TIMEOUT: "E06",
    ERR_CODE_TOO_FEW: "E04",
    ERR_CODE_TOO_MANY: "E03",
    ERR_CODE_UNAVAILABLE: "E02",
};

// Error Items
export const C_ERR_ITEM = {
    ERR_ITEM_ACCESS_HASH: "ACCESS_HASH",
    ERR_ITEM_AUTH: "AUTH",
    ERR_ITEM_AUTH_ID: "AUTH_ID",
    ERR_ITEM_DH_KEY: "DH_KEY",
    ERR_ITEM_ENCRYPTION: "ENCRYPTION",
    ERR_ITEM_INPUT: "INPUT",
    ERR_ITEM_JOB_WORKER: "JOB_WORKER",
    ERR_ITEM_MESSAGE: "MESSAGE",
    ERR_ITEM_MESSAGE_ID: "MESSAGE_ID",
    ERR_ITEM_PEER: "PEER",
    ERR_ITEM_PEER_TYPE: "PEER_TYPE",
    ERR_ITEM_PHONE: "PHONE",
    ERR_ITEM_PHONE_CODE: "PHONE_CODE",
    ERR_ITEM_PQ: "PQ",
    ERR_ITEM_PROTO: "PROTO",
    ERR_ITEM_RANDOM_ID: "RANDOM_ID",
    ERR_ITEM_REQUEST: "REQUEST",
    ERR_ITEM_RSA_KEY: "RSA_KEY",
    ERR_ITEM_SERVER: "SERVER",
    ERR_ITEM_SIGN_IN: "SIGN_IN",
    ERR_ITEM_USER_ID: "USER_ID",
};